100% responsive, menos las cards quizas, agregadas referencias, agregar imagen y modificar mi imagen

--- a/index.html
+++ b/index.html
@@ -74,7 +74,27 @@
             <p class="">maximodonza.bussines@gmail.com</p>
     
         </div>
-
+    </div>
+    <h3 class="ref">Referencias</h3>
+    <div class="referencias">
+        <div class="card">
+            <a href="https:www.youtube.com">
+                <h4>Pablo Gutierrez</h4>
+                <img src="" alt="pablocara">
+            </a>
+        </div>
+        <div class="card">
+            <a href="https:www.youtube.com">
+                <h4>Santiago Henze</h4>
+                <img src="" alt="santiagocara">
+            </a>
+        </div>
+        <div class="card">
+            <a href="https:www.youtube.com">
+                <h4>Fausto Carmody</h4>
+                <img src="" alt="faustocara">
+            </a>
+        </div>                
     </div>
     
     <script src="saludo.js"></script>
