solucionado responsive, agregada pantalla carga. cambiar imagenes y crear dropdown

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="carga.js"></script>
     <script src="https://kit.fontawesome.com/dc2641be77.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Mi Portfolio</title>
 </head>
 <body>
+    <div id="contenedor_carga">
+        <div id="carga">
+
+        </div>
+    </div>
     <header>
 
         <h1 class="saludo" id="saludo"></h1>
@@ -80,19 +86,25 @@
         <div class="card">
             <a href="https:www.youtube.com">
                 <h4>Pablo Gutierrez</h4>
-                <img src="" alt="pablocara">
+                <img src="./assets/img/micara.jpg" alt="pablocara">
             </a>
         </div>
         <div class="card">
             <a href="https:www.youtube.com">
                 <h4>Santiago Henze</h4>
-                <img src="" alt="santiagocara">
+                <img src="./assets/img/micara.jpg" alt="santiagocara">
             </a>
         </div>
         <div class="card">
             <a href="https:www.youtube.com">
                 <h4>Fausto Carmody</h4>
-                <img src="" alt="faustocara">
+                <img src="./assets/img/micara.jpg" alt="faustocara">
+            </a>
+        </div>
+        <div class="card">
+            <a href="https:www.youtube.com">
+                <h4>Carlos DiCicco</h4>
+                <img src="./assets/img/micara.jpg" alt="carloscara">
             </a>
         </div>                
     </div>
