--- a/index.html
+++ b/index.html
@@ -86,25 +86,25 @@
         <div class="card">
             <a href="https:www.youtube.com">
                 <h4>Pablo Gutierrez</h4>
-                <img src="./assets/img/micara.jpg" alt="pablocara">
+                <img src="" alt="pablocara">
             </a>
         </div>
         <div class="card">
             <a href="https:www.youtube.com">
                 <h4>Santiago Henze</h4>
-                <img src="./assets/img/micara.jpg" alt="santiagocara">
+                <img src="" alt="santiagocara">
             </a>
         </div>
         <div class="card">
             <a href="https:www.youtube.com">
                 <h4>Fausto Carmody</h4>
-                <img src="./assets/img/micara.jpg" alt="faustocara">
+                <img src="" alt="faustocara">
             </a>
         </div>
         <div class="card">
             <a href="https:www.youtube.com">
                 <h4>Carlos DiCicco</h4>
-                <img src="./assets/img/micara.jpg" alt="carloscara">
+                <img src="" alt="carloscara">
             </a>
         </div>                
     </div>
