solucionado img referencias, di cicco cambiar foto el o yo.

--- a/index.html
+++ b/index.html
@@ -84,27 +84,27 @@
     <h3 class="ref">Referencias</h3>
     <div class="referencias">
         <div class="card">
-            <a href="https:www.youtube.com">
+            <a href="https://github.com/pablitogutierrez">
                 <h4>Pablo Gutierrez</h4>
-                <img src="" alt="pablocara">
+                <img src="https://avatars.githubusercontent.com/u/159458290?v=4" alt="pablocara">
             </a>
         </div>
         <div class="card">
-            <a href="https:www.youtube.com">
+            <a href="https://github.com/santiagohenze">
                 <h4>Santiago Henze</h4>
-                <img src="" alt="santiagocara">
+                <img src="https://avatars.githubusercontent.com/u/129229364?v=4" alt="santiagocara">
             </a>
         </div>
         <div class="card">
             <a href="https:www.youtube.com">
                 <h4>Fausto Carmody</h4>
-                <img src="" alt="faustocara">
+                <img src="https://avatars.githubusercontent.com/u/129229362?v=4" alt="faustocara">
             </a>
         </div>
         <div class="card">
             <a href="https:www.youtube.com">
-                <h4>Carlos DiCicco</h4>
-                <img src="" alt="carloscara">
+                <h4>Carlos Di Cicco</h4>
+                <img src="https://static.licdn.com/aero-v1/sc/h/9c8pery4andzj6ohjkjp54ma2" alt="carloscara">
             </a>
         </div>                
     </div>
