img responsive solucionada texto centrado

--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
     <div class="cuerpo">
 
         <div class="descripcion" id="descripcion">
-            <div class="cara">
+            <div class="cara" id="cara">
                 <img src="./assets/img/micara.jpg" alt="cara">
             </div>
-
             <div class="text">
-
+                <div class="cara">
+                    <img src="./assets/img/micara.jpg" alt="cara">
+                </div>
                 <h3>Maximo S. Donza</h3> 
                 <p class="p-info">
                     Soy Máximo Donza, tengo 17 años y soy un trainee en programación. Mi meta es ser desarrollador full stack, aunque me gusta más el backend. 
