--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="carga.js"></script>
+    <script src="cancion.js"></script>
     <script src="https://kit.fontawesome.com/dc2641be77.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Mi Portfolio</title>
@@ -97,19 +98,19 @@
             </a>
         </div>
         <div class="card">
-            <a href="https:www.youtube.com">
+            <a href="https://github.com/dcfausto">
                 <h4>Fausto Carmody</h4>
                 <img src="https://avatars.githubusercontent.com/u/129229362?v=4" alt="faustocara">
             </a>
         </div>
         <div class="card">
-            <a href="https:www.youtube.com">
+            <a href="https://www.linkedin.com/in/carlos-andr%C3%A9s-di-cicco-8046225/">
                 <h4>Carlos Di Cicco</h4>
-                <img src="https://static.licdn.com/aero-v1/sc/h/9c8pery4andzj6ohjkjp54ma2" alt="carloscara">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" alt="carloscara">
             </a>
         </div>                
     </div>
-    
+    <iframe class="cancion" id="cancion" style="border-radius:12px" src="https://open.spotify.com/embed/album/2rIdWbXPjcq8K7BCccBhhC?utm_source=generator" width="20%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <script src="saludo.js"></script>
 </body>
 </html>
