--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         
             <h3>Redes</h3>
             <div class="redes">
-                    <a href="https://github.com/MaximoSDonza/"><i class="fa-brands fa-github"></i> Github</a>
-                    <a href="https://www.instagram.com/maximodonza"><i class="fa-brands fa-instagram"></i> Instagram</a>
-                    <a href=""><i class="fa-brands fa-linkedin-in"></i> Linkedin</a>
+                    <a href="https://github.com/MaximoSDonza/"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.instagram.com/maximodonza"><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
             <p class="">maximodonza.bussines@gmail.com</p>
     
