Front end actualizado

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,8 +35,8 @@
                 </div>
                 <h3>Maximo S. Donza</h3> 
                 <p class="p-info">
-                    Soy Máximo Donza, tengo 17 años y soy un trainee en programación. Mi meta es ser desarrollador full stack, aunque me gusta más el backend. 
-                    Actualmente me encuentro en el último año de la educación secundaria. Soy un apasionado por la música y los videojuegos. Estudié en la E.E.S.T Nº 2 de Junín.
+                    Tengo 18 años  ,soy un programador trainee. Mi meta es ser desarrollador full stack, aunque prefiero el backend. 
+                    Actualmente me encuentro en el último año de la educación secundaria. Estudié en la E.E.S.T Nº 2 de Junín.
                 </p>
                 <h3>Tecnologias</h3>
                 <p class="p-tec">
@@ -52,7 +52,7 @@
                         <li><i class="fa-solid fa-database"></i> MySQL</li>
                     </ul>
                     <ul>
-                        <li><i class="fa-solid fa-database"></i> MongoDB</li>
+                        <li><i class="fa-brands fa-react"></i> React</li>
                         <li><i class="fa-brands fa-php"></i> PHP</li>
                     </ul>
                 </div>
@@ -110,7 +110,7 @@
             </a>
         </div>                
     </div>
-    <iframe class="cancion" id="cancion" style="border-radius:12px" src="https://open.spotify.com/embed/album/2rIdWbXPjcq8K7BCccBhhC?utm_source=generator" width="20%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe class="cancion" id="cancion" style="border-radius:12px" src="https://open.spotify.com/embed/album/2rIdWbXPjcq8K7BCccBhhC?utm_source=generator" width="350px" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <script src="saludo.js"></script>
 </body>
 </html>
