cambio en el scrollbar, dos nuevas tecnologias

--- a/index.html
+++ b/index.html
@@ -44,16 +44,20 @@
                 </p>
                 <div class="tecnologias">
                     <ul>
-                        <li><i class="fa-brands fa-github"></i> Github</li>
-                        <li><i class="fa-brands fa-java"></i> Java</li>
+                        <li><i class="fa-brands fa-github"></i> GITHUB</li>
+                        <li><i class="fa-brands fa-java"></i> JAVA</li>
                     </ul>
                     <ul>
-                        <li><i class="fa-brands fa-js"></i> JavaScript</li>
-                        <li><i class="fa-solid fa-database"></i> MySQL</li>
+                        <li><i class="fa-brands fa-js"></i> JAVASCRIPT</li>
+                        <li><i class="fa-solid fa-database"></i> MYSQL</li>
                     </ul>
                     <ul>
-                        <li><i class="fa-brands fa-react"></i> React</li>
+                        <li><i class="fa-brands fa-react"></i> REACT</li>
                         <li><i class="fa-brands fa-php"></i> PHP</li>
+                    </ul>
+                    <ul>
+                        <li><i class="fa-brands fa-html5"></i> HTML</li>
+                        <li><i class="fa-brands fa-css3-alt"></i> CSS</li>
                     </ul>
                 </div>
                 
